unfortuantely remove image on mobile due to device nav issues

--- a/src/App.css
+++ b/src/App.css
@@ -32,10 +32,5 @@ canvas {
 	left: 0;
 }
 .mobile-background {
-    background: url('./images/threeJS/space.jpeg') no-repeat center center fixed;
-    background-size: cover;
- 
+	background: var(--black);
 }
-
-
-
